--- a/pages/6/index.html
+++ b/pages/6/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="frame d-flex">
         <div class="d-flex frame-card">
-            <img class="user-img" src="./assest/wanted.jpg" alt="">
+            <img class="user-img" src="./assest/8820884236412eff9c4bf0dfa796faee.jpg" alt="">
             <h1>Hi, I'm Monkey D. Luffy</h1>
             <hr>
             <p>
@@ -18,10 +18,11 @@
             </p>
             <div>
                 <ul>
-                    <li><a href=""><img src="./assest/" alt=""></a></li>
-                    <li><a href=""><img src="./assest/" alt=""></a></li>
-                    <li><a href=""><img src="./assest/" alt=""></a></li>
-                    <li><a href=""><img src="./assest/" alt=""></a></li>
+                    <li><a href=""><img src="./assest/icon/icons8-twitter-50.png" alt=""></a></li>
+                    <li><a href=""><img src="./assest/icon/icons8-github-50.png" alt=""></a></li>
+                    <li><a href=""><img src="./assest/icon/icons8-facebook-50.png" alt=""></a></li>
+                    <li><a href=""><img src="./assest/icon/icons8-instagram-50.png" alt=""></a></li>
+                   
                 </ul>
             </div>
         </div>
